--- a/import_3dm/blender_manifest.toml
+++ b/import_3dm/blender_manifest.toml
@@ -2,11 +2,11 @@ schema_version = "1.0.0"
 
 # Example of manifest file for a Blender extension
 # Change the values according to your extension
-id = "import_3dm"
-version = "0.0.16"
-name = "Import Rhinoceros 3D"
-tagline = "Import Rhinoceros 3dm files in Blender"
-maintainer = "Nathan 'jesterKing' Letwory"
+id = "import_3dm_lasvit_fork"
+version = "0.0.17-beta1"
+name = "Import Rhinoceros 3D (Fixed) - Lasvit Fork v0.0.17-beta1"
+tagline = "LASVIT FORK: Import Rhinoceros 3dm files with versioned collections and improved defaults"
+maintainer = "Jakub Dobrovolný (Lasvit)"
 # Supported types: "add-on", "theme"
 type = "add-on"
 
